# embedded_drone

./: .gitignore  .gitmodules  BreadDrone.ino  CMakeLists.txt  README.md  sdkconfig  temp.txt
components/VL53L1_ULD_ESP/: CMakeLists.txt
components/VL53L1_ULD_ESP/platform/: VL53L1_platform.c
components/bmi088/: CMakeLists.txt  bmi088.c
components/bmi088/include/: bmi088.h
components/bmp388/: CMakeLists.txt
components/bno055/: CMakeLists.txt
components/core/: CMakeLists.txt  controllers.c  estimator.c  motors.c  sensors.c
components/core/include/: controllers.h  estimator.h  motors.h  sensors.h
components/digital_io/: CMakeLists.txt  digital_io.c
components/digital_io/include/: digital_io.h
components/espnow/: CMakeLists.txt  espnow.c
components/espnow/include/: espnow.h
components/i2c_setup/: CMakeLists.txt  i2c_setup.c
components/i2c_setup/include/: i2c_setup.h
components/pmw3901/: CMakeLists.txt  pmw3901.c
components/pmw3901/include/: pmw3901.h
components/spi_setup/: CMakeLists.txt  spi_setup.c
components/spi_setup/include/: spi_setup.h
components/test_wifi/: CMakeLists.txt  Kconfig.projbuild  esp_now.c  esp_now_example.c
components/test_wifi/include/: esp_now.h  esp_now_example.h
components/vl53l0x/: CMakeLists.txt  vl53l0x.c
components/vl53l1x/: CMakeLists.txt  vl53l1_platform.c
components/vl53l1x/include/: vl53l1_platform.h
drone/components/VL53L1_ULD_ESP/: CMakeLists.txt
drone/components/VL53L1_ULD_ESP/platform/: VL53L1_platform.c  VL53L1_platform.h
drone/components/pmw3901/: CMakeLists.txt  pmw3901.c
drone/main/: CMakeLists.txt  Kconfig.projbuild  controllers.c  controllers.h  deck.c  drone.c  main.c  main.h  sensors.c  sensors.h  vl53_wrapper.cpp
drone_v1.1/: .gitignore
drone_v1.1/components/bosch/: CMakeLists.txt
drone_v1.1/components/controller/: CMakeLists.txt
drone_v1.1/components/filter/: CMakeLists.txt
drone_v1.1/components/helper/: CMakeLists.txt
drone_v1.1/components/i2c/: CMakeLists.txt
drone_v1.1/main/: CMakeLists.txt  idf_component.yml  main.c
main/: CMakeLists.txt  Kconfig.projbuild  complementary_filter.c  complementary_filter.h  controllers.c  controllers.h  estimator.c  estimator.h  i2c_basic_example_main.c  main.c  main.h  motors.c  motors.h  sensors.c  sensors.h  vl53lx1.c
main/inc/: controllers.h  estimator.h  i2c_setup.h  main.h  sensors.h
main/inc/leftover/: VL53L1X_api.h  VL53L1X_calibration.h  vl53l1_platform.h  vl53l1_types.h
main/src/: controllers.c  estimator.c  i2c_setup.c  main.c  sensors.c  vl53l1_platform.c
main/src/leftover/: VL53L1X_api.c  VL53L1X_calibration.c  vl53l1_platform.c
(+15 files in other folders)
